# google-groups-to-sftp-example

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml
hq_example_google_directory_export/: export.py  toggle_user_group_settings.py
